# replacer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/rule/: expr_rule.rs  mod.rs  string_rule.rs  struct_rule.rs  type_rule.rs
tests/: expr_template.rs  expr_test.rs  string_test.rs  struct_result.rs  struct_template.rs  struct_test.rs  template.rs  test.rs  type_result.rs  type_template.rs  type_test.rs
tests/results/: type.rs
tests/templates/: string.rs  type.rs
